# p7-follow-person-JavideuS

./: .gitignore  README.md
stalkerv2/: CMakeLists.txt  package.xml
stalkerv2/config/: params.yaml
stalkerv2/include/stalkerv2/: PIDController.hpp  PersonFollower.hpp
stalkerv2/launch/: detection3d_hsv.launch.py  laser.launch.py  sensorslaunch.py  setupYololaunch.py  yoloDetectionlaunch.py  yoloNodelaunch.py  yolov8.launch.py
stalkerv2/src/: main.cpp
stalkerv2/src/stalkerv2/: PIDController.cpp  PersonFollower.cpp
